--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #191919">
-  <a class="navbar-brand" href=""><img src="../../static/logo(transparent)%20(2).png" width="40" height="40" style="margin-right: 5px"/>Tacos on Mars</a>
+  <a class="navbar-brand" href="/"><img src="../../static/logo(transparent)%20(2).png" width="40" height="40" style="margin-right: 5px"/>Tacos on Mars</a>
   <div class="collapse navbar-collapse" id="navbarsExample02">
     <ul class="navbar-nav ">
       <li class="nav-item">
