--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="/posts"><i class="fa-solid fa-utensils"></i>Food</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="/posts"><i class="fa-solid fa-code"></i>Programming</a>
+        <a class="nav-link" href="/programming"><i class="fa-solid fa-code"></i>Programming</a>
       </li>
     </ul>
   </div>
