--- a/programming/templates/programming/all_programming_posts.html
+++ b/programming/templates/programming/all_programming_posts.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <h1>Hello World</h1>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+
+
+{% endblock %}
