--- a/programming/templates/programming/all_programming_posts.html
+++ b/programming/templates/programming/all_programming_posts.html
@@ -1,6 +1,36 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<main role="main">
+        <div class="album py-5 mt-5" style="background-color: #191919">
+    <div class="container">
 
+      <div class="row">
+
+      {% for Programming_Post in programming_posts %}
+        {% load static %}
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h3 class="card-title">{{ Programming_Post.Title }}</h3>
+              <p class="text-muted">{{ Programming_Post.Description }}</p>
+              <p class="card-text"><em>{{ Programming_Post.Author }}</em></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="{% url 'programming:single_programming_post' Programming_Post.pk %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                </div>
+                <small class="text-muted">{{Post.Date}}</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</main>
 
 {% endblock %}
