--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,12 +19,10 @@
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-dark fixed-top" style="background-color: #191919">
-  <a class="navbar-brand" href="/"><img src="../../static/logo(transparent)%20(2).png" width="40" height="40" style="margin-right: 5px"/>Tacos on Mars</a>
-  <div class="collapse navbar-collapse" id="navbarsExample02">
-    <ul class="navbar-nav ">
-      <li class="nav-item">
-        <a class="nav-link" href="/"><i class="fa-solid fa-house-chimney"></i>Home</a>
-      </li>
+  <a class="navbar-brand" href="/"><img src="../../static/logo(transparent)%20(2).png" width="50" height="50"/></a>
+      <h1 style="color:white">TACOS ON MARS</h1>
+  <div class="collapse navbar-collapse  justify-content-end" id="navbarsExample02">
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="/posts"><i class="fa-solid fa-book"></i>Blog</a>
       </li>
@@ -33,6 +31,9 @@
       </li>
         <li class="nav-item">
         <a class="nav-link" href="/programming"><i class="fa-solid fa-code"></i>Programming</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/about"><i class="fa-solid fa-user-astronaut"></i>About</a>
       </li>
     </ul>
   </div>
